--- a/reserve.html
+++ b/reserve.html
@@ -62,7 +62,7 @@
                                 <label for="reserve-unique-id">Unique ID</label>
                                 <input type="text" class="form-control" id="reserve-unique-id">
                             </div>
-                            <button type="submit" class="btn btn-primary submit">Submit</button>
+                            <button type="submit" class="btn btn-primary submit" id="send">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -80,6 +80,30 @@
         </footer>
 
     </div>
+    <script>
+        document.getElementById("send").addEventListener("click", function (event) {
+            event.preventDefault();
+            const newReservation = {
+                name: document.getElementById("reserve-name").value.trim(),
+                phoneNumber: document.getElementById("reserve-phone").value.trim(),
+                email: document.getElementById("reserve-email").value.trim(),
+                id: document.getElementById("reserve-unique-id").value.trim()
+            }
+            console.log("posting" + JSON.stringify(newReservation));
+            fetch("/reserve", {
+                    method: "POST",
+                    body: JSON.stringify(newReservation),
+                    headers: {
+                        "Content-Type": "application/json"
+                    }
+                })
+                .then((res) => res.json())
+                .then(
+                    function (data) {
+                        console.log("reserve.html", data);
+                    })
+        })
+    </script>
 </body>
 
 </html>
